# HelloQt

./: CMakeLists.txt  README.md  main.cpp  mainwindow.ui
